...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true">

            <Button
                android:id="@+id/buttonExplorer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimary"
                android:onClick="goToDiscover"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_fav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@drawable/favs_home"
            android:onClick="goToFav"
...
