...
        \n\nWe are working to offer a better and customize experience offering more details information and a better integration with Spooncular.
        \n\nRuokapp is a open-source project and you could find the source code on:
    </string>
    <string name="git_hub">Github - Ruokapp</string>

    <!-- Menu -->
    <string name="title_preference">Preferences</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>

</resources>

